Isolate problem bit more, plus:
 - juicy-tile-list: remove transitions, force display: block, width: 100%
 - imported-template: use HTML imports only, loadtemplate from local document on timeout.

--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -1,4 +1,4 @@
 ﻿<template bind>
-    <div class="launcher-labeled-input">1</div>
-    <div class="launcher-labeled-input">2</div>
+    <div>1</div>
+    <div>2</div>
 </template>
