There is no editing mode in juicy-tile-list any longer

--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -189,14 +189,9 @@
                 this.$.dropdown.toggle();
             }.bind(this));
 
-            this.$.settings.addEventListener('tap', function () {
-                this.editingMode = !this.editingMode;
-                var elems = document.querySelectorAll("juicy-tile-grid");
-                for (var i = 0, ilen = elems.length; i < ilen; i++) {
-                  elems[i].editingMode = this.editingMode;
-                }
-            }.bind(this));
-
+        },
+        toggleEditingMode: function(){
+          this.editingMode = !this.editingMode;          
         }
 
 
