Use image-mask for company logo - #54

--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -1,4 +1,4 @@
-﻿
+﻿<link rel="import" href="vendor/image-mask/src/image-mask.html">
 <template bind="{{SuperCRM}}">
 
     <style>
@@ -16,7 +16,9 @@
 
     </style>
 
-    <h1>Logo here</h1>
+    <h1>
+        <image-mask size="128" title="Logo here"></image-mask>
+    </h1>
 
 
     <div class="launcher-labeled-input">
