Change image-mask to tomalec/image-mask which gives title attribute support - #54

--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -17,7 +17,7 @@
     </style>
 
     <h1>
-        <image-mask size="128" title="Logo here"></image-mask>
+        <image-mask size="128" title="Logo here">Logo here</image-mask>
     </h1>
 
 
