Set default tile size to 100% x autoHeight  (#79)

--- a/Apps/Map/Client/dashboard.html
+++ b/Apps/Map/Client/dashboard.html
@@ -10,4 +10,4 @@
 <!-- Importing Custom Element -->
 <link rel="import" href="/vendor/static-openstreetmap/src/static-openstreetmap.html">
 
-<template bind="{{Map}}"><div class="map"><static-openstreetmap lat="{{ Longitude$ }}" lng="{{ Latitude$ }}" zoom="{{ Zoom$ }}"></static-openstreetmap></div></template>
+<template bind="{{Map}}"><div class="map"><static-openstreetmap style="min-height: 32px;" lat="{{ Longitude$ }}" lng="{{ Latitude$ }}" zoom="{{ Zoom$ }}"></static-openstreetmap></div></template>
