--- a/Apps/SuperCRM/Client/contact.html
+++ b/Apps/SuperCRM/Client/contact.html
@@ -4,7 +4,7 @@
 
 <template bind="{{SuperCRM}}">
 
-    <gravatar-img email="{{ Email$ }}"></gravatar-img>
+    <gravatar-img email="{{ Email$ }}" style="min-height: 32px;"></gravatar-img>
 
     <div class="launcher-labeled-input">
         <input id="PersonFirstName$" type='text' value='{{ Person.FirstName$ }}' placeholder='<First Name>'>
