--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -49,13 +49,21 @@
       </div>
       <template bind="{{ results }}">
         <!-- FIXME: hardcoded priority -->
-        <juicy-tile-grid class="workspace launcher" id="juicy-tile:{{Html}}" disabled>
+        <juicy-tile-grid class="workspace launcher" id="juicy-tile:{{Html}}" disabled defaultTileSetup="
+        {
+            'heightAuto': true,
+            'width': '100%'
+        }">
           <template is="imported-template" content="{{ Html }}"></template>   
         </juicy-tile-grid>
       </template>
         <template repeat="{{ workspaces }}">
         <warpech-display-route match-path="^\/launcher\/workspace\/{{appName}}" display-selector=".workspace.{{appName}}"></warpech-display-route>
-        <juicy-tile-grid class="workspace {{appName}}" id="juicy-tile:{{master.Html}}" disabled>
+        <juicy-tile-grid class="workspace {{appName}}" id="juicy-tile:{{master.Html}}" disabled defaultTileSetup="
+        {
+            'heightAuto': true,
+            'width': '100%'
+        }">
             <template bind="{{ master }}">
                 <template is="imported-template" content="{{ Html }}"></template>  
             </template> 
