use WebSockets (experimental); install PuppetJs#master (candidate 0.1.13) from bower

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -79,6 +79,7 @@
         rootTemplate.bindingDelegate = new PolymerExpressions;
         rootTemplate.model = obj;
       });
+      window.puppet.useWebSocket = true;
     });
   </script>
 </body>
