Separate local storage from juicy-tile-list (Juicy/juicy-tile-list#18).
Add: core-localstorage
Update dependencies (bower):

 - Juicy/juicy-tile-list@74487ba
 - Juicy/juicy-tile-editor@dd9f9d40

--- a/Apps/Skyper/Client/skyper-friends-list.html
+++ b/Apps/Skyper/Client/skyper-friends-list.html
@@ -15,11 +15,15 @@
     <section class="Skyper">
         <!--<h1>Friends list</h1>-->
         <template repeat="{{ Friends }}">
-	        <juicy-tile-grid id="juicy-tile:{{Html}}" disabled defaultTileSetup="
-        {
-            'heightAuto': true,
-            'width': '100%'
-        }">
+            <core-localstorage name="juicy-tile:{{Html}}" value="{{_setup}}"></core-localstorage>
+	        <juicy-tile-grid 
+                id="juicy-tile:{{Html}}" 
+                setup="{{_setup}}" 
+                disabled 
+                defaultTileSetup="{
+                    'heightAuto': true,
+                    'width': '100%'
+                }">
 	            <template is="imported-template" content="{{ Html }}"></template>
         	</juicy-tile-grid>
         </template>
