--- a/Apps/SuperCRM/Client/company.html
+++ b/Apps/SuperCRM/Client/company.html
@@ -40,11 +40,15 @@
         <h1><i class="icon-adult"></i><span class="i-name">Contacts</span></h1>
 
         <template repeat="{{ Contacts }}">
-            <juicy-tile-grid id="juicy-tile:{{Html}}" disabled defaultTileSetup="
-        {
-            'heightAuto': true,
-            'width': '100%'
-        }">
+            <core-localstorage name="juicy-tile:{{Html}}" value="{{_setup}}"></core-localstorage>
+            <juicy-tile-grid 
+                id="juicy-tile:{{Html}}" 
+                setup="{{_setup}}" 
+                disabled 
+                defaultTileSetup="{
+                    'heightAuto': true,
+                    'width': '100%'
+                }">
                 <template is="imported-template" content="{{ Html }}"></template>
             </juicy-tile-grid>
         </template>
