Revert connented WebSockets support

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -91,7 +91,7 @@
         rootTemplate.bindingDelegate = new PolymerExpressions;
         rootTemplate.model = obj;
       });
-      // window.puppet.useWebSocket = true;
+      window.puppet.useWebSocket = true;
       window.puppet.ignoreAdd = /\/_setup/;
     });
   </script>
