--- a/Apps/Skyper/Client/skyper-friends-list.html
+++ b/Apps/Skyper/Client/skyper-friends-list.html
@@ -14,19 +14,7 @@
 
     <section class="Skyper">
         <!--<h1>Friends list</h1>-->
-        <template repeat="{{ Friends }}">
-            <core-localstorage name="juicy-tile:{{Html}}" value="{{_setup}}"></core-localstorage>
-	        <juicy-tile-grid 
-                id="juicy-tile:{{Html}}" 
-                setup="{{_setup}}" 
-                disabled 
-                defaultTileSetup="{
-                    'heightAuto': true,
-                    'width': '100%'
-                }">
-	            <template is="imported-template" content="{{ Html }}"></template>
-        	</juicy-tile-grid>
-        </template>
+        <template is="launcher-partial" repeat="{{ Friends }}"></template>
     </section>
 
 </template>
