--- a/Apps/Skyper/Client/skyper.html
+++ b/Apps/Skyper/Client/skyper.html
@@ -6,19 +6,7 @@
 
     <div class="Skyper">
         <h1>Skyper</h1>
-        <template bind="{{MyOnlyFriend}}">
-            <core-localstorage name="juicy-tile:{{Html}}" value="{{_setup}}"></core-localstorage>
-            <juicy-tile-grid 
-                id="juicy-tile:{{Html}}" 
-                setup="{{_setup}}" 
-                disabled 
-                defaultTileSetup="{
-                    'heightAuto': true,
-                    'width': '100%'
-                }">
-	            <template is="imported-template" content="{{Html}}"></template>
-        	</juicy-tile-grid>
-        </template>
+        <template is="launcher-partial" bind="{{MyOnlyFriend}}"></template>
     </div>
 
 </template>
