--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -17,6 +17,7 @@
     <link rel="import" href="/vendor/juicy-tile-editor/src/juicy-tile-editor.html">
     <link rel="import" href="/vendor/warpech-display-router/warpech-display-router.html">
     <link rel="import" href="/vendor/core-localstorage/core-localstorage.html">
+    <link rel="import" href="/elements/launcher-partial/launcher-partial.html">
 
     <link rel="stylesheet" href="/css/style.css">
 
