--- a/Client/elements/dashboard/pj-dashboard.html
+++ b/Client/elements/dashboard/pj-dashboard.html
@@ -130,6 +130,10 @@
                 <polymer-ui-icon icon="search"></polymer-ui-icon>
                 <input placeholder="Search" value="{{search}}" update-on="input"/>
             </polymer-ui-field>
+
+
+            <content select=".pj-launcher-user"></content>
+
             <polymer-ui-icon-button id="account" icon="account"></polymer-ui-icon-button>
             <polymer-ui-icon-button id="settings" icon="settings" on-click="{{toggleEditingMode}}"></polymer-ui-icon-button>
         </polymer-ui-toolbar>
