--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -17,6 +17,7 @@
     <link rel="import" href="/vendor/warpech-display-router/warpech-display-router.html">
     <link rel="import" href="/vendor/core-localstorage/core-localstorage.html">
     <link rel="import" href="/elements/launcher-partial/launcher-partial.html">
+    <link rel="import" href="/elements/launcher-partial/launcher-root-partial.html">
 
     <link rel="stylesheet" href="/css/style.css">
 
@@ -53,40 +54,21 @@
           </ul>
 
       </div>
-      <template bind="{{ results }}">
-        <!-- FIXME: hardcoded priority -->
-        <core-localstorage name="juicy-tile:{{Html}}" value="{{_setup}}"></core-localstorage>
-        <juicy-tile-grid 
-          class="workspace launcher" 
-          id="juicy-tile:{{Html}}" 
-          setup="{{_setup}}"
-          disabled 
-          defaultTileSetup="{
-            'heightAuto': true,
-            'width': '100%'
-        }">
-          <template is="imported-template" content="{{ Html }}"></template>   
-        </juicy-tile-grid>
-      </template>
-        <template repeat="{{ workspaces }}">
-        <warpech-display-route match-path="^\/launcher\/workspace\/{{appName}}" display-selector=".workspace.{{appName}}"></warpech-display-route>
-
-        <core-localstorage name="juicy-tile:{{Html}}" value="{{_setup}}"></core-localstorage>
-        <juicy-tile-grid  
-          setup="{{_setup}}"
-          class="workspace {{appName}}" 
-          id="juicy-tile:{{master.Html}}" 
-          disabled 
-          defaultTileSetup="{
-              'heightAuto': true,
-              'width': '100%'
-          }">
-            <template bind="{{ master }}">
-                <template is="imported-template" content="{{ Html }}"></template>  
-            </template> 
-        </juicy-tile-grid>
-        <warpech-display-route match-path="^\/launcher\/[^w][^o][^r][^k][^s][^p][^a][^c][^e]" display-selector=".workspace.launcher"></warpech-display-route>
-      </template>
+      <div id="launcher-content">
+          <!-- Dashboard/results -->
+          <launcher-root-partial
+            class="workspace launcher" bind="{{ results }}"></launcher-root-partial>
+            <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
+          <warpech-display-route match-path="^\/$|(\/launcher\/(?!workspace))" display-selector=".workspace.launcher"></warpech-display-route>
+                
+          <!-- Workspaces -->
+          <template repeat="{{ workspaces }}">
+              <!-- - workspace -->
+              <warpech-display-route match-path="^\/launcher\/workspace\/{{appName}}" display-selector=".workspace.{{appName}}"></warpech-display-route>
+              <launcher-root-partial
+                class="workspace {{appName}}" bind="{{master}}"></launcher-root-partial>
+          </template>
+      </div>
     </pj-dashboard>
   </template>
   <puppet-js ref="root" ignoreadd="/_setup"></puppet-js>
