useWebSocket in puppet-js, as it should now work fine with PuppetJS@0.2.2

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -102,5 +102,5 @@
           </template>
       </div>
   </template>
-  <puppet-js ref="root" ignoreadd="/_setup"></puppet-js>
+  <puppet-js ref="root" ignoreadd="/_setup" useWebSocket></puppet-js>
 </body>
