Use Launcher namespace in root response

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -45,7 +45,7 @@
 </head>
 
 <body is="launcher-main">
-  <template id="root" bind>
+  <template id="root" bind="{{Launcher}}">
       <div class="launcher-toolbar launcher-topbar">
           <a href="/"><img id="homeIcon" src="/images/elusive-iconfont/dev/icons-svg/home.svg"></a>
           <core-field class="launcher-theme">
