--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -45,7 +45,8 @@
 </head>
 
 <body is="launcher-main">
-  <template id="root" bind="{{Launcher}}">
+  <template id="root" bind >
+  <template bind="{{Launcher}}">
       <div class="launcher-toolbar launcher-topbar">
           <a href="/"><img id="homeIcon" src="/images/elusive-iconfont/dev/icons-svg/home.svg"></a>
           <core-field class="launcher-theme">
@@ -102,5 +103,6 @@
           </template>
       </div>
   </template>
-  <puppet-js ref="root" ignoreadd="/_setup" useWebSocket></puppet-js>
+  </template>
+  <puppet-js ref="root" ignoreadd="/_setup"></puppet-js>
 </body>
