--- a/Client/elements/launcher-partial/launcher-root-partial.html
+++ b/Client/elements/launcher-partial/launcher-root-partial.html
@@ -7,15 +7,18 @@ with predefined template content, which should be used to include partials.
 
 <link rel="import" href="../../vendor/imported-template/imported-template.html">
 <link rel="import" href="../../vendor/juicy-tile-grid/src/juicy-tile-grid.html">
+<link rel="import" href="../../vendor/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html">
 <link rel="import" href="../../vendor/core-localstorage/core-localstorage.html">
 <!-- <link rel="import" href="../../vendor/console-log/console-log.html"> -->
 
 <template id="partial-template">
   <template bind>
+   <!-- unfortunately [[ obj ]] does not work deep (for nested properties) -->
     <core-localstorage name="juicy-tile:{{Html}}" value="{{_setup}}"></core-localstorage>
+    <juicy-tiles-setup-sync name="juicy-tile:{{Html}}" storedValue="{{_setup}}" ></juicy-tiles-setup-sync>
     <juicy-tile-grid 
         id="juicy-tile:{{Html}}" 
-        setup="{{_setup}}"
+        setup="[[ _setup | clonedSetup  ]]"
         defaultTileSetup="{
             'heightAuto': true,
             'width': '100%'
@@ -26,6 +29,8 @@ with predefined template content, which should be used to include partials.
 </template>
 <script>
   (function () {
+
+
     var templ = document.currentScript.ownerDocument.getElementById("partial-template");
 
     var templateAttribute = {
@@ -62,6 +67,26 @@ with predefined template content, which should be used to include partials.
      */
     LauncherPartialPrototype.attachedCallback = function LPartialAttached(){
       var innerTempl = this.getElementsByTagName("template")[0];
+      innerTempl.bindingDelegate = new PolymerExpressions();
+      innerTempl.bindingDelegate.clonedSetup = {
+        toDOM: function (json, letter) {
+          // debugger
+          if(typeof json == "object"){
+            return JSON.parse(JSON.stringify(json));
+          } else{
+            return json;
+          }
+        },
+        toModel: function (json, letter) {
+          // debugger
+          if(typeof json == "object"){
+            return JSON.parse(JSON.stringify(json));
+          } else{
+            return json;
+          }
+        }
+      }
+
       innerTempl.model = this.templateInstance.model;
       // return (HTMLTemplateElement || HTMLElement ).prototype.createdCallback.apply(this, arguments);
     };
