--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -23,7 +23,6 @@
     <link rel="import" href="/vendor/model-operations/model-operations.html">
     <link rel="import" href="/vendor/juicy-tile-editor/src/juicy-tile-editor.html">
     <link rel="import" href="/vendor/warpech-display-router/warpech-display-router.html">
-    <link rel="import" href="/vendor/x-html/juicy-html.html">
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="/css/style.css">
@@ -78,12 +77,10 @@
 
       <div id="launcher-content">
           <!-- Launchpad -->
-          Launchpad
-          <template is="juicy-html" content="/app-name"></template>
-          <template is="juicy-html" content="/app-icon"></template>
-          merger:<template is="imported-template" content="{{launchpad.icons.Html}}"></template>
 
           <template bind="{{launchpad.icons}}">
+              <div class="launchpad">
+              <h1>Launchpad</h1>
               <juicy-tile-grid 
                   id="juicy-tile:{{Html}}" 
                   defaultTileSetup="{
@@ -91,24 +88,25 @@
                       'width': 66
                   }"
                   gutter="20"
-                  class="launchpad">
+                  class="launchpad-icons">
                   <style>
-                  .launchpad{
+                  .launchpad-icons{
                     width: 100%;
                     display: block;
                   }
 
-                  .launchpad > *{
+                  .launchpad-icons > *{
                     padding: 2px;
                     border-radius: 13px;
                   }
-                  .launchpad > *:hover {
+                  .launchpad-icons > *:hover {
                     box-shadow: inset 0px 0px 10px rgba(138, 152, 176,0.8);
 
                   }
                   </style>
                  <template is="imported-template" content="{{Html}}"></template>
               </juicy-tile-grid>
+              <warpech-display-route match-path="^\/$" display-selector=".launchpad"></warpech-display-route>
           </template>
           <!-- <launcher-root-partial -->
             <!-- class="workspace launcher" bind="{{ results }}"></launcher-root-partial> -->
@@ -116,7 +114,8 @@
 
           <!-- Dashboard/results -->
           <launcher-root-partial
-            class="workspace launcher" bind="{{ results }}"></launcher-root-partial>
+            class="workspace launcher" bind="{{ results }}">
+            </launcher-root-partial>
             <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
           <warpech-display-route match-path="^\/$|(\/launcher\/(?!workspace))" display-selector=".workspace.launcher"></warpech-display-route>
                 
