Launchpad for (`/launcher`) - #92

--- a/Client/LauncherTemplate.html
+++ b/Client/LauncherTemplate.html
@@ -106,7 +106,7 @@
                   </style>
                  <template is="imported-template" content="{{Html}}"></template>
               </juicy-tile-grid>
-              <warpech-display-route match-path="^\/$" display-selector=".launchpad"></warpech-display-route>
+              <warpech-display-route match-path="^\/$|\/launcher" display-selector=".launchpad"></warpech-display-route>
           </template>
           <!-- <launcher-root-partial -->
             <!-- class="workspace launcher" bind="{{ results }}"></launcher-root-partial> -->
